--- a/jQuery/Part1_MyDocument.html
+++ b/jQuery/Part1_MyDocument.html
@@ -15,11 +15,9 @@
       }
     </style>
 
-    <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="../_css/jquery-3.3.1.slim.min.js"></script>
+	<link rel="stylesheet" href="../_css/bootstrap.min.css">
+    
   </head>
   <body>
     <div class="container">
@@ -50,6 +48,8 @@
     <input type="text" name="" value="Enter Your Name">
     <input type="submit" name="" value="Submit">
     </div>
+
+	<script src="myscript.js"></script>
 
   </body>
 </html>
