Use jquery-3.3.1.min.js instead of jquery-3.3.1.slim.min.js, the later does NOT has .fadeOut() function.

--- a/Bootstrap/Part3_Navbar-bs4.html
+++ b/Bootstrap/Part3_Navbar-bs4.html
@@ -80,7 +80,7 @@
 
   <!-- Need to have JQuery and Javascript for DropDown Actions to work -->
 
-<script src="../_css/jquery-3.3.1.slim.min.js"></script>
+<script src="../_css/jquery-3.3.1.min.js"></script>
 <script src="../_css/popper.min.js"></script>
 <script src="../_css/bootstrap.min.js"></script>
 
