--- a/jQuery/Part1_MyDocument.html
+++ b/jQuery/Part1_MyDocument.html
@@ -15,7 +15,7 @@
       }
     </style>
 
-	<script src="../_css/jquery-3.3.1.slim.min.js"></script>
+	<script src="../_css/jquery-3.3.1.min.js"></script>
 	<link rel="stylesheet" href="../_css/bootstrap.min.css">
     
   </head>
